syntax = "proto3";

package fr.unice.polytech.soa.team.j.bluegalacticx.mission;

option java_multiple_files = true;
option java_package =
    "fr.unice.polytech.soa.team.j.bluegalacticx.mission.proto";

message MissionStatusRequest {
  string missionId = 1;
  enum MissionStatus {
    PENDING = 0; STARTED = 1; SUCCESSFUL = 2; FAILED = 3; ABORTED = 4;
  }
  MissionStatus status = 2;
}
